# cargo-upload

./: Cargo.toml  README.md
src/: main.rs  parse_cargo_toml.rs  upload.rs
