[package]
name = "cargo-upload"
version = "0.1.1"
edition = "2021"
repository = "https://gitlab.com/TalRoni/cargo-upload"
homepage = "https://gitlab.com/TalRoni/cargo-upload"
description = "Cargo tool for upload crate files to private registry (like crates-registry)"
authors = ["Tal Y Roni <tal.inon.16@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"

[dependencies]
env_logger = "0.10"
tar = "0.4"
flate2 = "1.0"
tmpdir = "1.0"
anyhow = "1.0"
tempfile = "3.4"
log = "0.4"
crates-io = "0.35"
cargo = "0.69"
itertools = "0.10"
cargo-util = "0.2"
clap = { version = "4.1", features=["derive"] }
